@@ -266,7 +266,7 @@ DataModel::update(QString filename, int  period)
             i =0;
             
             /* fill hours */
-            while  (dp != NULL && i<24*3600) {
+            while  (dp != NULL && i<5*24*3600) {
                 if (temp_data = dp->data().GetDataForTime(current_hour + i, true)){
                     if (temp_data->StartTime() + 60 == current_hour + i){
                         forecast_data = new DataItem(temp_data);
