@@ -1,6 +1,8 @@
 meecast (0.5.7) unstable; urgency=low
 
   * Added hours weather forecast for foreca.com source  
+  * Fixed problem with temperetaure in hours weather forecast in gismeteo.ru
+    source
 
  -- Vlad Vasiliev <vlad@gas.by>  Wed, 28 Mar 2011 21:42:23 +0200
 
